# agentcore-samples

./: .gitignore  CONTRIBUTORS.md  README.md
01-tutorials/: README.md
02-use-cases/role-based-hr-data-agent/: .gitignore  README.md  app.py  dev-requirements.txt  main.py  pyproject.toml  requirements.txt  run_50_tests.sh  run_quick_validation.sh
02-use-cases/role-based-hr-data-agent/agent_config/: access_token.py  agent.py  agent_task.py  utils.py
02-use-cases/role-based-hr-data-agent/app_modules/: auth.py  chat.py  main.py  styles.py  utils.py
02-use-cases/role-based-hr-data-agent/cfn/: agentcore-infrastructure.yaml
02-use-cases/role-based-hr-data-agent/docs/diagrams/: flow.md
02-use-cases/role-based-hr-data-agent/prerequisite/: cognito.yaml  infrastructure.yaml  prereqs_config.yaml
02-use-cases/role-based-hr-data-agent/prerequisite/cedar/: hr_dlp_policies.cedar
02-use-cases/role-based-hr-data-agent/prerequisite/lambda/: api_spec.json
02-use-cases/role-based-hr-data-agent/prerequisite/lambda/interceptors/: request_interceptor.py  response_interceptor.py  tenant_mapping.py
02-use-cases/role-based-hr-data-agent/prerequisite/policies/: dlp_redaction_rules.txt  hr_data_governance.txt
02-use-cases/role-based-hr-data-agent/scripts/: agentcore_agent_runtime.py  agentcore_gateway.py  cleanup.sh  cleanup_cfn.sh  cognito_credentials_provider.py  create_cedar_policies.py  deploy_cfn.sh  package_runtime.sh  prereq.sh  utils.py
02-use-cases/role-based-hr-data-agent/test/: test_agent.py  test_dlp_redaction.py  test_gateway.py
(+455 files in other folders)
