[project]
name = "role-based-hr-data-agent"
version = "0.1.0"
description = "Role-based HR data access agent with DLP enforcement via Amazon Bedrock AgentCore"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "boto3>=1.34.0",
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
